--- a/tmux.conf
+++ b/tmux.conf
@@ -30,8 +30,8 @@ set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'default'
 set -g @fpp-key 'x'
 
-set -g window-style 'fg=colour29,bg=colour236'
-set -g window-active-style 'fg=colour42,bg=colour236'
+# set -g window-style 'fg=colour29,bg=colour236'
+# set -g window-active-style 'fg=colour42,bg=colour236'
 
 # set the pane border colors 
 set -g pane-border-fg colour235
