--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -9,7 +9,6 @@ unbind %
 unbind C-b
 set-option -g prefix C-x
 bind-key C-x send-prefix
-set -g utf8 on
 
 # Change buffer navigation to vi mode
 set-window-option -g mode-keys vi
@@ -34,10 +33,10 @@ set -g @fpp-key 'x'
 # set -g window-active-style 'fg=colour42,bg=colour236'
 
 # set the pane border colors 
-set -g pane-border-fg colour235
-set -g pane-border-bg colour238
-set -g pane-active-border-fg colour236 
-set -g pane-active-border-bg colour250 
+set -g pane-border-style fg=colour235
+set -g pane-border-style bg=colour238
+set -g pane-active-border-style fg=colour236 
+set -g pane-active-border-style bg=colour250 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
