--- a/rice/config/i3/config
+++ b/rice/config/i3/config
@@ -8,7 +8,7 @@ set $mod Mod4
 # exec clipit
 
 # Load .Xresources on start
-# exec xrdb -merge $HOME/.Xresources
+exec xrdb -merge $HOME/.Xresources
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -124,32 +124,21 @@ bindsym Shift+Print exec "scrot -a $(slop -f '%x,%y,%w,%h')  $HOME/Pictures/Scre
 bindsym Ctrl+Print exec "scrot -a $(slop -f '%x,%y,%w,%h') /tmp/%Y-%m-%d_%H%M%S.png -e 'xclip -selection clipboard -target image/png -i $f'"
 
 
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10
-
-bindsym XF86AudioMute exec "amixer -q -D pulse sset Master toggle && pkill -RTMIN+10 i3blocks"
-bindsym XF86AudioLowerVolume exec "amixer -q -D pulse sset Master 5%- && pkill -RTMIN+10 i3blocks"
-bindsym XF86AudioRaiseVolume exec "amixer -q -D pulse sset Master on && amixer -q -D pulse sset Master 5%+ && pkill -RTMIN+10 i3blocks"
+# bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+# bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+# 
+# bindsym XF86AudioMute exec "amixer -q -D pulse sset Master toggle && pkill -RTMIN+10 i3blocks"
+# bindsym XF86AudioLowerVolume exec "amixer -q -D pulse sset Master 5%- && pkill -RTMIN+10 i3blocks"
+# bindsym XF86AudioRaiseVolume exec "amixer -q -D pulse sset Master on && amixer -q -D pulse sset Master 5%+ && pkill -RTMIN+10 i3blocks"
 # resize window (you can also use the mouse for that)
-exec feh --bg-center /home/avasz/Pictures/x390.png
+exec feh --bg-center /home/asher/.config/wallpaper/bg.png
 
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
@@ -163,7 +152,7 @@ bindsym $mod+r mode "resize"
 #
 bar {
 
-	font pango:Fira Code 11
+	font pango:Iosevka 14
 	position bottom
     status_command SCRIPT_DIR=$HOME/.config/i3blocks/scripts i3blocks
 
@@ -185,14 +174,14 @@ assign [class="^Slack$"] 4
 hide_edge_borders both
 
 # Execute nm-applet
-exec nm-applet
+# exec nm-applet
 
-exec dunst
+# exec dunst
 # Alt+shift to toggle between US & NP keymaps
-exec --no-startup-id setxkbmap us,np -option 'grp:alt_shift_toggle'
+# exec --no-startup-id setxkbmap us,np -option 'grp:alt_shift_toggle'
 
 # Disable touchpad in Thinkpad x260
-exec xinput set-prop `xinput --list | awk '/[Tt]ouch[Pp]ad.*pointer/ {print $5}' | sed 's/id=\(.*\)/\1/'` "Device Enabled" 0
+# exec xinput set-prop `xinput --list | awk '/[Tt]ouch[Pp]ad.*pointer/ {print $5}' | sed 's/id=\(.*\)/\1/'` "Device Enabled" 0
 
 # Use Caps Lock key as Escape
 exec setxkbmap -option caps:escape
@@ -210,33 +199,11 @@ bindsym $mod+space [instance="metask"] scratchpad show
 client.focused #555555 #555555 #ffffff #fff     #fff
 
 
-### Quick terminal right
-#exec --no-startup-id urxvt -name left
-#for_window [instance="left"] floating enable;
-#for_window [instance="left"] move scratchpad; [instance="left"] scratchpad show; move position 0px 0px; resize set 640 1080; move scratchpad
-#bindsym $mod+u [instance="left"] scratchpad show
-
-### Quick terminal mid
-##exec --no-startup-id urxvt -name mid -e tmux new -A -s "mid"
-#exec --no-startup-id urxvt -name mid
-#for_window [instance="mid"] floating enable;
-#for_window [instance="mid"] move scratchpad; [instance="mid"] scratchpad show; move position 640px 0px; resize set 640 1080; move scratchpad
-#bindsym $mod+i [instance="mid"] scratchpad show
-
 ## Quick terminal right
 exec --no-startup-id urxvt -name right 
 for_window [instance="right"] floating disable;
 for_window [instance="right"] move scratchpad; [instance="right"] scratchpad show; move position 1280px 0px; resize set 640 1080; move scratchpad
 bindsym $mod+o [instance="right"] scratchpad show
-
-## Cmus
-#exec --no-startup-id xterm -name music -e "cat /home/avasz/.config/i3/config"
-#for_window [instance="music"] floating enable;
-#for_window [instance="music"] move scratchpad; [instance="music"] scratchpad show; move scratchpad
-#bindsym $mod+m [instance="music"] scratchpad show
-
-## Execute Redshift
-exec redshift
 
 ### i3-gaps stuff ###
 
@@ -255,8 +222,8 @@ gaps outer 0
 
 # aps mode
 set $mode_gaps Gaps: (o) outer, (i) inner
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_outer Outer Gaps: k|j|0 (local)
+set $mode_gaps_inner Inner Gaps: k|j|0 (local)
 bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
@@ -267,28 +234,21 @@ mode "$mode_gaps" {
 }
 
 mode "$mode_gaps_inner" {
-        bindsym plus  gaps inner current plus 5
-        bindsym minus gaps inner current minus 5
-        bindsym 0     gaps inner current set 0
-
-        bindsym Shift+plus  gaps inner all plus 5
-        bindsym Shift+minus gaps inner all minus 5
-        bindsym Shift+0     gaps inner all set 0
+        bindsym k gaps inner current plus 5
+        bindsym j gaps inner current minus 5
+        bindsym 0 gaps inner current set 0
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
 mode "$mode_gaps_outer" {
-        bindsym plus  gaps outer current plus 5
-        bindsym minus gaps outer current minus 5
-        bindsym 0     gaps outer current set 0
-
-        bindsym Shift+plus  gaps outer all plus 5
-        bindsym Shift+minus gaps outer all minus 5
-        bindsym Shift+0     gaps outer all set 0
+        bindsym k gaps outer current plus 5
+        bindsym j gaps outer current minus 5
+        bindsym 0 gaps outer current set 0
 
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
+exec_always --no-startup-id $HOME/.config/polybar/launch_polybar
