--- a/shell/tmux.conf
+++ b/shell/tmux.conf
@@ -7,8 +7,8 @@ unbind %
 
 # unbind the default C-b
 unbind C-b
-set-option -g prefix C-x
-bind-key C-x send-prefix
+set-option -g prefix C-s
+bind-key C-s send-prefix
 
 # Change buffer navigation to vi mode
 set-window-option -g mode-keys vi
@@ -26,7 +26,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 
 # Setting theme
 # set -g @themepack 'basic'
-set -g @themepack 'default'
+set -g @themepack 'basic'
 set -g @fpp-key 'x'
 
 # set -g window-style 'fg=colour29,bg=colour236'
