--- a/shell/.devenv.yaml
+++ b/shell/.devenv.yaml
@@ -1,22 +1,21 @@
 configs:
 
-  # Default config for editing on newell
+  # Default config for editing ExaGO on newell
   newell-exago:
     launch-command: srun -A exasgd -p newell_shared -N 1 -n 2 -t '59:00' --pty bash
 
     modules:
-      - vim/8.2.1479
-      - gcc/7.4.0
-      - cmake/3.19.6
-      - python/anaconda3
-      - openmpi/3.1.5
-      - cuda/10.2
+      - vim
+      - git
 
     commands:
       - cd ~/workspace/exago
+      - pwd
       - rm -rf build install
+      - ls
       - mkdir build install
-      - source ./buildsystem/newellVariables.sh
+      - source ./buildsystem/gcc-cuda/newellVariables.sh
+      - source /share/apps/anaconda3/etc/profile.d/conda.sh
 
   marianas:
     launch-command: srun -A exasgd -p dl -N 1 -n 2 -t '59:00' --pty bash
